[gd_scene load_steps=20 format=2]

[ext_resource path="res://-tests/heli_test/ui/helicopter_hud_mockup.svg" type="Texture" id=1]
[ext_resource path="res://-tests/heli_test/ui/styles/panel_wireframe_rounded_5.tres" type="StyleBox" id=2]
[ext_resource path="res://-tests/heli_test/ui/ui_cross_dash.svg" type="Texture" id=3]
[ext_resource path="res://-tests/heli_test/scripts/helicopter_hud.gd" type="Script" id=4]
[ext_resource path="res://-tests/heli_test/ui/fonts/JetBrainsMono/JetBrainsMono.tres" type="DynamicFont" id=5]
[ext_resource path="res://-tests/heli_test/ui/nodes/BlurBackground.tscn" type="PackedScene" id=6]
[ext_resource path="res://-tests/heli_test/ui/ui_meter.svg" type="Texture" id=7]
[ext_resource path="res://-tests/heli_test/ui/styles/panel_transparent.tres" type="StyleBox" id=8]
[ext_resource path="res://-tests/heli_test/ui/linear_gradient.svg" type="Texture" id=9]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
shadow_color = Color( 0, 0.117647, 0, 0.294118 )
shadow_size = 2
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id=6]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
shadow_color = Color( 0, 0.117647, 0, 0.294118 )
shadow_size = 2
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
shadow_color = Color( 0, 0.117647, 0, 0.294118 )
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
shadow_color = Color( 0, 0.117647, 0, 0.294118 )
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 1 )

[node name="HelicopterHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 512.0 ]
}

[node name="UIMockup" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 0.470588, 1, 0, 1 )
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterCursor" type="Panel" parent="."]
modulate = Color( 0, 1, 0.392157, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 20, 20 )
mouse_filter = 2
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VelocityGraph" type="Panel" parent="."]
modulate = Color( 0, 1, 0.392157, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -101.0
margin_right = 30.0
margin_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 60, 60 )
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VelocityGraph"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
rect_min_size = Vector2( 10, 10 )
mouse_filter = 2
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GuideCross" type="TextureRect" parent="VelocityGraph"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="BlurBackground" parent="VelocityGraph" instance=ExtResource( 6 )]

[node name="LabelFPS" type="Label" parent="."]
modulate = Color( 0, 1, 0.392157, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -56.0
margin_right = -80.0
margin_bottom = -36.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.294118 )
custom_fonts/font = ExtResource( 5 )
text = "FPS: {fps}"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LiftForceProgress" type="Panel" parent="."]
modulate = Color( 0, 1, 0.392157, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -62.0
margin_top = -188.0
margin_right = -52.0
margin_bottom = -38.0
grow_vertical = 0
rect_min_size = Vector2( 10, 100 )
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="LiftForceProgress"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 0, 5 )
mouse_filter = 2
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlurBackground" parent="LiftForceProgress" instance=ExtResource( 6 )]

[node name="PowerProgress" type="Panel" parent="."]
modulate = Color( 0, 1, 0.392157, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -46.0
margin_top = -188.0
margin_right = -36.0
margin_bottom = -38.0
grow_vertical = 0
rect_min_size = Vector2( 10, 100 )
rect_pivot_offset = Vector2( -278, 32 )
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PowerProgress"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
mouse_filter = 2
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlurBackground" parent="PowerProgress" instance=ExtResource( 6 )]

[node name="AngularProgress" type="Panel" parent="."]
modulate = Color( 0, 1, 0.392157, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 30.0
margin_right = 100.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="AngularProgress"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 5, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlurBackground" parent="AngularProgress" instance=ExtResource( 6 )]

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
modulate = Color( 0, 1, 0.392157, 1 )
margin_left = 35.0
margin_top = -90.0
margin_right = 200.0
margin_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SPD" type="Panel" parent="Panel/VBoxContainer"]
margin_right = 165.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
rect_pivot_offset = Vector2( -124, 53 )
mouse_filter = 2
custom_styles/panel = SubResource( 7 )

[node name="LabelSpeed" type="Label" parent="Panel/VBoxContainer/SPD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 45.0
custom_colors/font_outline_modulate = Color( 0.984314, 1, 0.541176, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.294118 )
custom_fonts/font = ExtResource( 5 )
text = "{SPD} km/h"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/SPD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -125.0
mouse_filter = 2
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer/SPD/Panel"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "SPD"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="BlurBackground" parent="Panel/VBoxContainer/SPD" instance=ExtResource( 6 )]

[node name="ALT" type="Panel" parent="Panel/VBoxContainer"]
margin_top = 30.0
margin_right = 165.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 25 )
mouse_filter = 2
custom_styles/panel = SubResource( 7 )

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/ALT"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -125.0
mouse_filter = 2
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer/ALT/Panel"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "ALT
"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="LabelAltitude" type="Label" parent="Panel/VBoxContainer/ALT"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 45.0
custom_colors/font_outline_modulate = Color( 0.984314, 1, 0.541176, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.294118 )
custom_fonts/font = ExtResource( 5 )
text = "{ALT} m (AGL)"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlurBackground" parent="Panel/VBoxContainer/ALT" instance=ExtResource( 6 )]

[node name="MessageBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 35.0
margin_top = -500.0
margin_right = 350.0
margin_bottom = -105.0
grow_vertical = 0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compass" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Compass"]
margin_left = -180.0
margin_top = 5.0
margin_right = 180.0
margin_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clip" type="Panel" parent="Compass/Panel"]
modulate = Color( 0, 1, 0.392157, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -180.0
margin_right = 180.0
rect_clip_content = true
mouse_filter = 2
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Compass/Panel/Clip"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 990.0
rect_pivot_offset = Vector2( -419, -91.5 )
mouse_filter = 2
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N3" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_right = 90.0
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/N3"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "N"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NE3" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 90.0
margin_right = 180.0
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/NE3"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "NE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E3" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 180.0
margin_right = 270.0
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/E3"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "E"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SE3" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 270.0
margin_right = 360.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( -249, 36 )
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/SE3"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "SE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S3" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 360.0
margin_right = 450.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( -124, 20.5 )
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/S3"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "S"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SW3" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 450.0
margin_right = 540.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( -249, 36 )
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/SW3"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "SW"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 540.0
margin_right = 630.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( -396, 18 )
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/W"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "W"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NW" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 630.0
margin_right = 720.0
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/NW"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "NW"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 720.0
margin_right = 810.0
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/N"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "N"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NE" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 810.0
margin_right = 900.0
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/NE"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "NE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 900.0
margin_right = 990.0
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/E"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "E"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SE" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 990.0
margin_right = 1080.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( -249, 36 )
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/SE"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "SE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 1080.0
margin_right = 1170.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( -124, 20.5 )
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/S"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "S"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SW" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 1170.0
margin_right = 1260.0
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/SW"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "SW"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W2" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 1260.0
margin_right = 1350.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( -396, 18 )
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/W2"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "W"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NW2" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 1350.0
margin_right = 1440.0
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/NW2"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "NW"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N2" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 1440.0
margin_right = 1530.0
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/N2"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "N"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NE2" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 1530.0
margin_right = 1620.0
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/NE2"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "NE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E2" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 1620.0
margin_right = 1710.0
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/E2"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "E"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SE2" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 1710.0
margin_right = 1800.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( -249, 36 )
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/SE2"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "SE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S2" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 1800.0
margin_right = 1890.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( -124, 20.5 )
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/S2"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "S"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SW2" type="TextureRect" parent="Compass/Panel/Clip/HBoxContainer"]
light_mask = 2
margin_left = 1890.0
margin_right = 1980.0
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 7 )
flip_v = true

[node name="Label" type="Label" parent="Compass/Panel/Clip/HBoxContainer/SW2"]
light_mask = 2
margin_left = -5.0
margin_top = -10.0
margin_right = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "SW"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DegreeContainer" type="Panel" parent="Compass/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_right = -150.0
margin_bottom = 20.0
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlurBackground" parent="Compass/Panel/DegreeContainer" instance=ExtResource( 6 )]

[node name="degree" type="Label" parent="Compass/Panel/DegreeContainer"]
modulate = Color( 0, 1, 0.392157, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "1337"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mask_right" type="Light2D" parent="Compass/Panel"]
position = Vector2( 445, 26 )
scale = Vector2( 3, 1 )
texture = ExtResource( 9 )
mode = 3
range_item_cull_mask = 2

[node name="mask_left" type="Light2D" parent="Compass/Panel"]
position = Vector2( -85, 26 )
rotation = 3.14159
scale = Vector2( 3, 1 )
texture = ExtResource( 9 )
mode = 3
range_item_cull_mask = 2
